# mtf-aware-deblurring

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  slurm.html
docs/: README.md  forward_model_overview.md  gpu_job_guide.md  physics_scheduler_notes.md  poster_script.md  proposal_summary.md
docs/baselines/: adam_denoiser_baseline.md  admm_pnp_baseline.md  rl_baseline.md  wiener_baseline.md
docs/experiments/: noise_runs.md
mtf_weights/: tiny_denoiser_sigma15.pth
scripts/: admm_sweep_modification.sh  admm_sweep_smoke.sh  phys_rho_weight_sweep.sh  test_admm_diffusion.sh  test_admm_physics.sh  test_cuda_forward.sh  test_cuda_inference.sh  train_large_score.sh  train_tiny_denoiser.py  train_tiny_denoiser_rgb.sh  train_tiny_score.sh  train_tiny_score_model.py  train_unet_denoiser.py  train_unet_denoiser_pg.sh
src/mtf_aware_deblurring/: __init__.py  datasets.py  forward_pipeline.py  metrics.py  noise.py  optics.py  patterns.py  runner.py  synthetic.py  torch_utils.py  utils.py
src/mtf_aware_deblurring/assets/: dncnn_sigma15.pth  tiny_denoiser_sigma15.pth  tiny_score_unet.pth
src/mtf_aware_deblurring/denoisers/: __init__.py  basic_block.py  dncnn.py  drunet.py  drunet_adapter.py  drunet_backbone.py  drunet_download.py  tiny_denoiser.py  unet_denoiser.py
src/mtf_aware_deblurring/diffusion/: __init__.py  guided_uncond_prior.py  prior.py  score_model.py
src/mtf_aware_deblurring/pipelines/: __init__.py  common.py  forward.py  reconstruct.py
src/mtf_aware_deblurring/reconstruction/: __init__.py  adam_denoiser.py  mtf_utils.py  (+5 more)
(+1 files in other folders)
